first row filter added responsive

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -41,6 +41,13 @@
 			padding-bottom: 24px
 		.old-price
 			top: 55%
+	.filter-blc
+		.more-filter-1 
+			.input-group 
+				input
+					width: 42.5%
+		
+	
 		/* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
@@ -63,6 +70,14 @@
 		padding-left: 0px
 	footer .second-row ul
 		margin-left: -40px
+	.filter-blc
+		.more-filter-1 
+			.input-group
+				input
+					width: 46.5%
+		.memory-blc
+			text-align: center
+			padding-bottom: 20px
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
@@ -111,8 +126,13 @@
 			.wrapper-adress
 				padding-bottom: 20px
 	// delivery
-	
-						
+	.filter-blc 
+		.filter-good 
+			.pos-abs-to-bottom
+				position: absolute
+	.filter-blc
+		
+				
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
