--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1084,6 +1084,7 @@ footer
 	// more-filter-1
 	.more-filter-1
 		padding-left: 20px
+		padding-right: 20px
 		padding-top: 20px
 		background: #fff
 		.input-group
@@ -1129,10 +1130,11 @@ footer
 		top: 0.2em
 		margin-left: -.3em
 	.color-blc
+		text-align: center
 		border-left: 1px solid #EEEEEF
 		border-right: 1px solid #EEEEEF
 		ul
-			margin-left: -14px
+			margin-left: -40px
 			margin-bottom: 0px
 			li
 				list-style: none
