filter added some responsive

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -130,7 +130,10 @@
 		.filter-good 
 			.pos-abs-to-bottom
 				position: absolute
-	.filter-blc
+		.more-filter-1 
+			.input-group
+				input
+					width: 44.5%
 		
 				
 /* Extra Small Devices, Phones */
@@ -169,6 +172,11 @@
 			font-size: 70px
 		h3
 			font-size: 40px
+	.filter-blc 
+		.more-filter-1 
+				.input-group
+					input
+						width: 40.5%
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
