--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -882,6 +882,11 @@ footer
 .section-2-catalog
 	padding-top: 80px
 	background: #F1F1F5
+	.title-page-filter
+		h3
+			color: #595c63
+			font-family: $RalewayBold
+			font-size: 30px
 	.section-2
 		padding-top: 0px
 // good item for catalog
@@ -1183,6 +1188,29 @@ footer
 				opacity: 1
 				font-family: $helvMedium
 				border-color: #ACADB1
+	.drop-down-filter
+		padding-bottom: 20px
+		.drop-down-filter-contorl
+			a
+				text-transform: uppercase
+				width: 159px
+				opacity: .5
+				color: #595c63
+				font-family: $helvBold
+				font-weight: 700
+				font-size: 12px
+				margin-left: 20px
+				border-bottom: 1px dashed #595c63
+
+				&:hover
+					color: $accent-orange
+					opacity: 1
+					border-color: $accent-orange
+		.drop-down-filter-drop
+			select
+				border: 1px solid #ACADB1
+				padding: 20px
+				border-radius: 5px
 	// end more-filter-1
 
 
