catalog filter-2 display toggle added

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -177,7 +177,12 @@
 				.input-group
 					input
 						width: 40.5%
-
+		.drop-down-filter 
+			.drop-down-filter-contorl 
+				a
+					display: block
+					width: 70%
+					border: none
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
