--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1190,9 +1190,11 @@ footer
 				border-color: #ACADB1
 	.drop-down-filter
 		padding-bottom: 20px
+		.drop-down-filter-body
+			display: none
 		.drop-down-filter-contorl	
 			padding-top: 20px
-			padding-bottom: 40px
+			padding-bottom: 20px
 			a
 				text-transform: uppercase
 				width: 159px
@@ -1252,6 +1254,8 @@ footer
 	margin-left: -20px
 	padding-left: 20px
 	padding-right: 20px
+	background: #fff
+.bg-darker
 	background: #F8F8F8
 	// end more-filter-1
 
