added self-made -js gallery

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1310,7 +1310,33 @@ footer
 	color: #595c63
 	font-family: $helvBold
 	font-size: 30px
-	
+.card-blc
+	background: #fff
+	+clearfix
+	.img-wrapper-card
+		text-align: center
+		img
+			max-width: 180px
+	.img-min-wrapper-card
+		position: relative
+		text-align: center
+		img
+			max-width: 90px
+			border: 1px solid #000
+			margin: 20px
+			padding: 20px
+		.fa
+			position: absolute
+		.fa-chevron-left
+			cursor: pointer
+			left: 0
+			top: 40%
+		.fa-chevron-right
+			cursor: pointer
+			right: 0
+			top: 40%
+
+
 
 // end card page
 // ====================== end serive page ====================
