card img + footer ended

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -78,6 +78,23 @@
 		.memory-blc
 			text-align: center
 			padding-bottom: 20px
+	.card-blc 
+		.card-blc-footer 
+			
+			.input-group
+				padding-left: 20px 
+				padding-right: 20px
+				width: 100%
+				padding-top: 10px
+			.name-input
+				padding-right: 55px
+				label
+					padding-left: 20px
+					display: block
+			.check-blc
+				padding-left: 30px
+				padding-top: 20px
+
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
