--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -91,7 +91,19 @@ blockquote
 		padding-left: 0px !important
 .mt-minus-20
 	margin-top: -20px
+.grey-dashed
+	text-align: center
+	a 
 
+		text-transform: uppercase
+		width: 159px
+		opacity: .5
+		color: #595c63
+		font-family: HelveticaNeueCyrBold,sans-serif
+		font-weight: 700
+		font-size: 12px
+		margin-left: 20px
+		border-bottom: 1px dashed #595c63
 // end duty classes
 // header
 .header-main
@@ -1314,6 +1326,7 @@ footer
 	background: #fff
 	+clearfix
 	.img-wrapper-card
+		padding-top: 40px
 		text-align: center
 		img
 			max-width: 180px
@@ -1322,12 +1335,23 @@ footer
 		text-align: center
 		img
 			max-width: 90px
-			border: 1px solid #000
+			border: 1px solid #E6E6E8
+			border-radius: 2px
 			margin: 20px
-			padding: 20px
+			padding-left: 20px
+			padding-right: 20px
+			padding-top: 10px
+			padding-bottom: 10px
+			&:hover
+				border: 1px solid #595C63
 		.fa
 			position: absolute
+			font-size: 20px
+			color: #AFB0B4
+			&:hover
+				color: #595C63
 		.fa-chevron-left
+
 			cursor: pointer
 			left: 0
 			top: 40%
@@ -1335,7 +1359,57 @@ footer
 			cursor: pointer
 			right: 0
 			top: 40%
+	.grey-dashed
+		padding-top: 20px
+		padding-bottom: 40px
+	.card-blc-footer
+		
+		background: #F8F8F8
+		h4
+			padding-top: 30px
+			padding-bottom: 30px
+			padding-left: 20px
+			color: #595c63
+			font-family: $helvMedium
+			font-size: 16px
+		.bg-logo
+			height: 100%
+			background: url(../img/big-logo-2.png) no-repeat -40px -70px
+		.input-group
+			width: 90%
+			padding-top: 35px
+			
+		input[type=text]
 
+			-webkit-border-radius: 45px
+			border-radius: 45px
+			border: 1px solid #dbdcda
+			padding: 15px
+			color: #595c63
+			font-family: HelveticaNeueCyrRoman,sans-serif
+			font-size: 14px
+			font-weight: 400
+			line-height: 35px
+			z-index: 1
+		.search-btn
+			opacity: 1
+			position: relative
+			width: 45px
+			height: 45px
+			background-color: #595C63
+			-webkit-border-radius: 23px
+			border-radius: 23px
+			-webkit-box-shadow: 0 0
+			box-shadow: 0 0
+			color: #fff
+			z-index: 2
+			margin-left: -15px
+		.fa-search
+			opacity: 1
+			font-size: 18px
+			position: absolute
+			left: 31%
+			top: 30%
 
 
 // end card page
