--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -7,3 +7,4 @@
 +font-face("HelveticaNeueCyrMedium", "../fonts/HelveticaNeueCyrMedium/HelveticaNeueCyr-Medium")
 +font-face("HelveticaNeueCyrRoman", "../fonts/HelveticaNeueCyrRoman/HelveticaNeueCyr-Roman")
 +font-face("RalewayBold", "../fonts/RalewayBold/Raleway-Bold")
++font-face("MyriadProRegular", "../fonts/MyriadProRegular/MyriadPro-Regular")
