card block desktop ended

--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -8,3 +8,4 @@
 +font-face("HelveticaNeueCyrRoman", "../fonts/HelveticaNeueCyrRoman/HelveticaNeueCyr-Roman")
 +font-face("RalewayBold", "../fonts/RalewayBold/Raleway-Bold")
 +font-face("MyriadProRegular", "../fonts/MyriadProRegular/MyriadPro-Regular")
++font-face("GlyphiconsHalflingsRegular", "../fonts/GlyphiconsHalflingsRegular/glyphicons-halflings-regular")
