--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -4,5 +4,6 @@ $helvMedium: "HelveticaNeueCyrMedium", sans-serif
 $helvLight: "HelveticaNeueCyrLight", sans-serif
 $helvRoman: "HelveticaNeueCyrRoman", sans-serif
 $RalewayBold: "RalewayBold", sans-serif
+$GlyphiconsHalflingsRegular: "GlyphiconsHalflingsRegular", sans-serif
 $accent-orange: #F33143
 $acccent-grey: #595c63
