--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -62,7 +62,23 @@ body
 	font-weight: 400
 	line-height: 2.4em
 	color: #fff
-	box-shadow: 0px 13px 100px 0px $accent-orange
+	&:hover
+		box-shadow: 0px 13px 100px 0px $accent-orange
+.btn-white
+	font-family: $helvRoman
+	font-size: 15px
+	width: 230px
+	height: 50px
+	background-color: #fff
+	border-radius: 25px
+	font-size: 15px
+	font-weight: 400
+	line-height: 2.4em
+	border: 1px solid #EEEEEF
+	color: $accent-orange
+	&:hover
+		border-color: $accent-orange
+		color: $accent-orange
 .pos-abs-to-bottom
 	position: absolute
 	bottom: 0
@@ -104,6 +120,9 @@ blockquote
 		font-size: 12px
 		margin-left: 20px
 		border-bottom: 1px dashed #595c63
+.prl20
+	padding-left: 20px
+	padding-right: 20px
 // end duty classes
 // header
 .header-main
@@ -958,25 +977,25 @@ footer
 		padding-top: 25px
 	.sub-title
 		padding-bottom: 45px
-	.price, .old-price
-		color: #595c63
-		font-family: $helvBold
-		font-size: 30px
-		font-weight: 700
-		line-height: 20px
-		padding-bottom: 74px
-	.old-price
-		top: 45%
-		left: 50%
-		width: 100px
-		margin-left: -50px
-		position: absolute
-		display: inline-block
-		padding-left: 10px
-		padding-right: 10px
-		padding: 0px
-		font-size: 16px
-		text-decoration: line-through $accent-orange 
+.price, .old-price
+	color: #595c63
+	font-family: $helvBold
+	font-size: 30px
+	font-weight: 700
+	line-height: 20px
+	padding-bottom: 74px
+.old-price
+	top: 45%
+	left: 50%
+	width: 100px
+	margin-left: -50px
+	position: absolute
+	display: inline-block
+	padding-left: 10px
+	padding-right: 10px
+	padding: 0px
+	font-size: 16px
+	text-decoration: line-through $accent-orange 
 
 
 .new-label, .hit-label
@@ -1348,11 +1367,14 @@ footer
 				color: #595c63
 				border-bottom: 1px solid $accent-orange
 	.img-wrapper-card
-		padding-top: 40px
+		padding-top: 60px
 		text-align: center
 		img
 			max-width: 180px
 	.img-min-wrapper-card
+		margin: 0 auto
+		max-width: 345px
+		padding-top: 40px
 		position: relative
 		text-align: center
 		img
@@ -1376,16 +1398,15 @@ footer
 
 			cursor: pointer
 			left: 0
-			top: 40%
+			top: 55%
 		.fa-chevron-right
 			cursor: pointer
 			right: 0
-			top: 40%
+			top: 55%
 	.grey-dashed
 		padding-top: 20px
 		padding-bottom: 40px
 	.card-blc-footer
-		
 		background: #F8F8F8
 		h4
 			padding-top: 30px
@@ -1506,7 +1527,63 @@ ul.leaders span + span
 				font-family: $helvMedium
 				font-weight: bold
 				font-size: 14px
-				
+	.buy-blc-card
+		position: relative
+		padding-right: 60px
+		.col-lg-6
+			+clearfix
+			height: 180px
+		span
+			font-family: $GlyphiconsHalflingsRegular
+		.buy-blc
+			width: 100%
+			text-align: center
+			position: absolute
+			bottom: 0
+			.old-price
+				top: -30px
+			.price
+				margin-left: 20px
+				color: $accent-orange
+				padding-bottom: 5px
+			.btn
+				width: 100%
+				margin-bottom: 2px
+				i 
+					font-size: 20px
+			span
+				right: -10px
+				position: absolute
+				width: 20px
+				height: 20px
+				border-radius: 40px
+				background: #F2F3F4
+				.fa
+					position: relative
+					top: -10px
+					color: #595C63
+					font-size: 10px
+		.credit
+			width: 100%
+			text-align: center
+			position: absolute
+			bottom: 0
+			p
+				color: #595c63
+				font-family: $helvMedium
+				font-size: 12px
+				font-weight: 500
+				line-height: 20px	
+			.btn-white
+				display: inline-block
+				margin-top: 5px
+				width: 100%
+				padding-left: 20px
+				padding-right: 20px
+				padding-top: 10px
+				padding-bottom: 10px
+				line-height: 25px	
+
 
 // end card page
 // ====================== end serive page ====================
