card blc added responsive

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -46,7 +46,13 @@
 			.input-group 
 				input
 					width: 42.5%
-		
+	.tabs-content 
+		.buy-blc-card 
+			.buy-blc 
+				span
+					right: -30px
+					top: 0
+
 	
 		/* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
@@ -151,8 +157,23 @@
 			.input-group
 				input
 					width: 44.5%
-		
-				
+	.card-blc 
+		.wrapper-tab 
+			.tabs-control-card
+				text-align: center
+				max-width: 100%	
+		.item-card
+			.color-blc-memory
+				max-width: 100%
+	.tabs-content 
+		.buy-blc-card
+			padding-bottom: 50px
+			padding-right: 35px
+			.buy-blc
+				span
+					right: 1%
+	ul.leaders
+		max-width: 100%			
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
