--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -62,6 +62,7 @@ body
 	font-weight: 400
 	line-height: 2.4em
 	color: #fff
+	text-transform: none
 	&:hover
 		box-shadow: 0px 13px 100px 0px $accent-orange
 .btn-white
@@ -1378,10 +1379,10 @@ footer
 		position: relative
 		text-align: center
 		img
+			margin-top: 10px
 			max-width: 90px
 			border: 1px solid #E6E6E8
 			border-radius: 2px
-			margin: 20px
 			padding-left: 20px
 			padding-right: 20px
 			padding-top: 10px
@@ -1398,11 +1399,11 @@ footer
 
 			cursor: pointer
 			left: 0
-			top: 55%
+			top: 60%
 		.fa-chevron-right
 			cursor: pointer
 			right: 0
-			top: 55%
+			top: 60%
 	.grey-dashed
 		padding-top: 20px
 		padding-bottom: 40px
@@ -1532,7 +1533,7 @@ ul.leaders span + span
 		padding-right: 60px
 		.col-lg-6
 			+clearfix
-			height: 180px
+			height: 145px
 		span
 			font-family: $GlyphiconsHalflingsRegular
 		.buy-blc
