--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -87,7 +87,7 @@ body
 	position: absolute
 	top: 0
 .pos-rel
-	position: relative
+	position: relative !important
 .margin-0-auto
 	margin: 0 auto
 blockquote
@@ -124,6 +124,8 @@ blockquote
 .prl20
 	padding-left: 20px
 	padding-right: 20px
+.z-index-7
+	z-index: 7
 // end duty classes
 // header
 .header-main
@@ -263,9 +265,7 @@ blockquote
 	.btn
 		margin-top: 60px
 		margin-bottom: 70px
-		&:hover
-			box-shadow: 0px 0px 0px 0px #000
-			color: #fff
+		
 	#myCarousel
 		height: 620px
 		.carousel-indicators
@@ -274,6 +274,36 @@ blockquote
 					border: none
 			li
 				opacity: .5
+// yamm mnu
+.main-logo
+	
+.active-logo
+	background: red
+	padding-top: 45px
+	padding-bottom: 30px
+	top: -45px
+	left: -60px
+	padding-left: 20px
+	padding-right: 20px
+.dropdown-menu
+	top: 0
+	z-index: 6
+	padding-top: 130px
+	ul
+		text-align: center
+		li
+			list-style: none
+			a
+				opacity: .5
+				color: #595c63
+				font-family: $helvMedium
+				font-size: 15px
+				font-weight: 500
+				&:hover
+					opacity: 1
+
+// end ymm mnu
+
 // end header-section
 // end header
 
@@ -647,8 +677,10 @@ footer
 	.navbar-default .navbar-nav>li>a.active, .tel-blc a
 		color: #595C63
 	.navbar-default .navbar-nav>li>a.dropdown-toggle
+		z-index: 7
 		color: #595C63 
 		font-family: $helvBold
+		background-color: transparent
 	.navbar-default .navbar-nav>li>a.active
 		font-weight: 400
 	.tel-blc a
