scrollbar plugin conected

--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -5,5 +5,5 @@
 @import "../libs/OwlCarousel2/dist/assets/owl.carousel"
 @import "../libs/MDB/css/mdb"
 @import "../libs/jquery-ui/jquery-ui.min"
-
+@import "../libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar"
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
