--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -291,16 +291,24 @@ blockquote
 	padding-top: 130px
 	ul
 		text-align: center
+		margin-bottom: 20px
 		li
 			list-style: none
+			text-align: left
 			a
 				opacity: .5
 				color: #595c63
-				font-family: $helvMedium
-				font-size: 15px
+				font-family: $helvMedium !important
+				font-size: 15px !important
 				font-weight: 500
 				&:hover
 					opacity: 1
+					color: #595c63 !important
+#drop-down-main-mnu
+	height: 400px
+	margin-bottom: 50px
+.grid-drop-mnu
+	padding-top: 70px
 
 // end ymm mnu
 
