making tabs in nav

--- a/app/libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css
+++ b/app/libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css
@@ -1265,3 +1265,4 @@ yx-axis
 	.mCS-inset-3-dark.mCSB_scrollTools .mCSB_dragger.mCSB_dragger_onDrag .mCSB_dragger_bar{ background-color: #fff; background-color: rgba(255,255,255,0.9); }
 	
 	/* ---------------------------------------- */
+.mCS-my-theme.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{ background-color: #F33143; }
