--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -278,7 +278,7 @@ blockquote
 .main-logo
 	
 .active-logo
-	background: red
+	background: $accent-orange
 	padding-top: 45px
 	padding-bottom: 30px
 	top: -45px
@@ -289,6 +289,7 @@ blockquote
 	top: 0
 	z-index: 6
 	padding-top: 130px
+	border: none
 	ul
 		text-align: center
 		margin-bottom: 20px
@@ -296,17 +297,31 @@ blockquote
 			list-style: none
 			text-align: left
 			a
+				opacity: 1
+				color: #595c63
+				font-family: $helvMedium 
+				font-size: 15px !important
+				font-weight: 500
+				&:hover
+					opacity: 1 !important
+					color: red !important
+#drop-down-main-mnu
+	height: 400px
+	margin-bottom: 50px
+	ul
+		li
+			a
 				opacity: .5
 				color: #595c63
-				font-family: $helvMedium !important
-				font-size: 15px !important
+				font-family: $helvMedium 
+				font-size: 15px 
 				font-weight: 500
 				&:hover
 					opacity: 1
 					color: #595c63 !important
-#drop-down-main-mnu
-	height: 400px
-	margin-bottom: 50px
+	.active
+		opacity: 1
+		
 .grid-drop-mnu
 	padding-top: 70px
 
