--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -321,7 +321,39 @@ blockquote
 					color: #595c63 !important
 	.active
 		opacity: 1
-		
+.advert-blc
+	background: url(../img/iphones-toglle-mnu.png) no-repeat right bottom
+	background-size: 158px
+	height: 400px
+	position: relative
+	.wrapper-text-advert-blc
+		padding-top: 15px
+		text-align: center
+		bottom: 0
+		position: absolute
+		width: 141px
+		height: 141px
+		border-radius: 90px
+		background-color: #e3e3e5
+		.old-price
+			position: relative
+			margin-left: 0px
+			left: auto
+		.title
+			color: #595c63
+			font-family: $helvMedium
+			font-size: 13px
+			
+.item-catalog
+	ul
+		li
+			a
+				opacity: 1
+				&:hover
+					opacity: 1
+					color: $accent-orange 
+	.active
+		opacity: 1
 .grid-drop-mnu
 	padding-top: 70px
 
