dropdown mnu responsive added

--- a/app/libs/MDB/css/mdb.css
+++ b/app/libs/MDB/css/mdb.css
@@ -5858,7 +5858,7 @@ button:focus {
 
 .navbar {
   font-weight: 300;
-  padding-right: 1rem !important; }
+  /*padding-right: 1rem !important;*/ }
   .navbar form input {
     margin: 0 5px 1px 8px;
     height: 1rem; }
