--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -9,7 +9,7 @@
 		width: 100%
 		li
 			&:nth-child(3n)
-				float: right
+				// float: right
 	.navbar-right
 		text-align: center
 		li
@@ -52,7 +52,8 @@
 				span
 					right: -30px
 					top: 0
-
+	.grid-drop-mnu
+		padding-top: 140px
 	
 		/* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
@@ -173,7 +174,20 @@
 				span
 					right: 1%
 	ul.leaders
-		max-width: 100%			
+		max-width: 100%		
+	.grid-drop-mnu
+		z-index: 10
+		background: #fff
+		margin-top: -10px
+		padding-top: 0px	
+	.header-others .navbar-default .navbar-right
+		z-index: 1
+	.advert-blc 
+		background: url(../img/iphones-toglle-mnu.png) no-repeat center 
+		background-size: 158px
+		.wrapper-text-advert-blc
+			top: 45%
+			left: 30%
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
