--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -326,6 +326,8 @@ blockquote
 	background-size: 158px
 	height: 400px
 	position: relative
+	margin-right: 20px
+	margin-bottom: 20px
 	.wrapper-text-advert-blc
 		padding-top: 15px
 		text-align: center
