dropdown mnu added to main page

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -188,6 +188,8 @@
 		.wrapper-text-advert-blc
 			top: 45%
 			left: 30%
+	.header-main .navbar-right, .header-others .navbar-right
+		z-index: 1
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
