--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -305,6 +305,9 @@ blockquote
 				&:hover
 					opacity: 1 !important
 					color: red !important
+#toggle-yamm
+	color: #75787D
+	background: transparent
 #drop-down-main-mnu
 	height: 400px
 	margin-bottom: 50px
