added some links to other pages

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -471,6 +471,7 @@ blockquote
 				font-family: $helvLight
 				padding-bottom: 40px
 		.good-wide-wrapper-action
+
 			padding-right: 25px
 			padding-top: 10px
 			text-align: right
@@ -483,6 +484,7 @@ blockquote
 				color: #fff
 			.btn
 				display: block
+				width: 100%
 	.third-row	
 		padding-bottom: 60px
 	.item-info
@@ -1005,6 +1007,7 @@ footer
 		font-family: $helvMedium
 		color: #fff
 .section-2-catalog
+	margin-top: -20px
 	padding-top: 80px
 	background: #F1F1F5
 	.title-page-filter
@@ -1150,8 +1153,10 @@ footer
 			border-bottom: none
 			padding-bottom: 0px
 			padding-top: 10px
-			&:hover
-				color: $accent-orange
+			a
+				opacity: 1
+				&:hover
+					color: $accent-orange
 .rotated
 	position: relative
 	top: 2px
