added font awsome some + change mnu to CLOSE when clicked

--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -9,3 +9,6 @@
 +font-face("RalewayBold", "../fonts/RalewayBold/Raleway-Bold")
 +font-face("MyriadProRegular", "../fonts/MyriadProRegular/MyriadPro-Regular")
 +font-face("GlyphiconsHalflingsRegular", "../fonts/GlyphiconsHalflingsRegular/glyphicons-halflings-regular")
++font-face("fontAwsome", "../fonts/fontAwsome/FontAwesome")
++font-face("fontAwsomeW", "../fonts/fontAwsome/fontawesome-webfont")
+
