--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -5,5 +5,6 @@ $helvLight: "HelveticaNeueCyrLight", sans-serif
 $helvRoman: "HelveticaNeueCyrRoman", sans-serif
 $RalewayBold: "RalewayBold", sans-serif
 $GlyphiconsHalflingsRegular: "GlyphiconsHalflingsRegular", sans-serif
+$fontAwsome: "fontAwsome", "fontAwsomeW"
 $accent-orange: #F33143
 $acccent-grey: #595c63
