--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -51,6 +51,12 @@ body
 	max-width: 100%
 	height: auto
 // duty classes
+.fa
+	font-family: $fontAwsome
+.fa-shopping-basket
+	font-size: 20px !important
+	top: -2px
+	padding-right: 10px 
 .btn
 	font-family: $helvRoman
 	font-size: 15px
@@ -1545,12 +1551,12 @@ footer
 			color: #fff
 			z-index: 2
 			margin-left: -15px
-		.fa-search
+		.fa-mouse-pointer
 			opacity: 1
 			font-size: 18px
 			position: absolute
-			left: 31%
-			top: 30%
+			left: 45%
+			top: 35%
 ul.leaders 
 	margin-top: 20px
 	max-width: 311px
