some fixes dropdown mnu

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -5,6 +5,8 @@
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
 	/**/
+	.active-logo
+		padding-bottom: 20px
 	.navbar-nav
 		width: 100%
 		li
@@ -237,6 +239,14 @@
 					display: block
 					width: 70%
 					border: none
+	.card-blc 
+		.wrapper-tab
+			.tabs-control-card
+				text-align: center
+				a 
+					margin-right: 0px
+					display: block
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
