--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -179,11 +179,21 @@ blockquote
 	img[src*=Menu-Icon]
 		width: 45px
 		height: 45px
+	img[src*=Menu-Icon-close]
+		display: none
 	img[src*=logo]
 		width: 139px
 		height: 51px
 		margin-top: -15px
-
+	img[src*=logo-white]
+		display: none
+		width: 139px
+		height: 51px
+		margin-top: -15px
+	.main-logo-white
+		position: absolute
+		left: 300px
+		top: 20px
 	.nav
 		.social-icons-navbar
 			padding-top: 10px
@@ -291,6 +301,10 @@ blockquote
 	left: -60px
 	padding-left: 20px
 	padding-right: 20px
+	position: absolute !important
+	left: 300px
+	top: 0px
+
 .dropdown-menu
 	top: 0
 	z-index: 6
