nav menu shop and search btn cahnged for wp

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -142,7 +142,7 @@ blockquote
 	.navbar-default .navbar-nav>li>a
 		&:hover
 			color: #fff
-	.navbar-default .navbar-nav>li>a.shop-btn, .navbar-default .navbar-nav>li>a.search-btn
+	.navbar-default .navbar-nav>li.shop-btn>a, .navbar-default .navbar-nav>li.search-btn>a
 		&:hover
 			background-color: #fff !important
 			color: $accent-orange
@@ -239,7 +239,7 @@ blockquote
 				
 				opacity: 1 !important
 				background: none !important
-	.shop-btn, .search-btn
+	.shop-btn>a,  .search-btn>a
 		opacity: 1 
 		position: relative
 		width: 45px
@@ -739,7 +739,7 @@ footer
 		box-shadow: 0px -5px 10px 10px #D9D8DC
 		.navbar-right
 			font-family: $helvMedium
-			.shop-btn, .search-btn
+			.shop-btn a, .search-btn a
 				background-color: #BEBFC3
 				color: #fff
 				&:hover
