nav menu shop and search btn cahnged for wp -2

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -23,10 +23,10 @@
 			a
 				padding: 0px
 				display: inline
-		.shop-btn, .search-btn
+		.shop-btn a, .search-btn a
 			display: inline-block
 			.badge
-	.header-main .navbar-right li .search-btn .fa, .header-main .navbar-right li .shop-btn .fa, .header-others .navbar-right li .search-btn .fa, .header-others .navbar-right li .shop-btn .fa
+	.header-main .navbar-right .search-btn>a .fa, .header-main .navbar-right .shop-btn>a .fa, .header-others .navbar-right .search-btn>a .fa, .header-others .navbar-right .shop-btn>a .fa
 		top: 30%		
 	footer .first-row ul li
 		padding-left: 15px
@@ -120,10 +120,10 @@
 					display: block
 				.badge
 					top: -35px
-			.shop-btn, .search-btn
+			.shop-btn a, .search-btn a
 				display: inline-block
 
-	.header-main .navbar-right li .search-btn .fa, .header-main .navbar-right li .shop-btn .fa, 	.header-others .navbar-right li .search-btn .fa, .header-others .navbar-right li .shop-btn .fa
+	.header-main .navbar-right .search-btn>a .fa, .header-main .navbar-right .shop-btn>a .fa, 	.header-others .navbar-right .search-btn>a .fa, .header-others .navbar-right .shop-btn>a .fa
 		top: 30%			
 	.header-main .navbar-right li:nth-child(5),.navbar-right li:nth-child(3n), .header-others .navbar-right li:nth-child(5),.navbar-right li:nth-child(3n)
 		display: inline	
